# use-locale

./: .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  CRATE_TEMPLATE.md  Cargo.toml  FORGES.md  GOVERNANCE.md  LICENSE-APACHE  MAINTAINERS.md  Makefile  README.md  RELEASE.md  RELEASING.md  deny.toml  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: facade-publish-readiness.yml  publish-readiness.yml  release-plz-release.yml  sbom.yml
crates/use-currency-code/: Cargo.toml  README.md
crates/use-currency-code/src/: lib.rs
crates/use-language/: Cargo.toml  README.md
crates/use-language/src/: lib.rs
crates/use-locale/: Cargo.toml  README.md
crates/use-locale-match/: Cargo.toml  README.md
crates/use-locale-match/src/: lib.rs
crates/use-locale-tag/: Cargo.toml  README.md
crates/use-locale-tag/src/: lib.rs
crates/use-locale/src/: lib.rs  prelude.rs
crates/use-region/: Cargo.toml  README.md
crates/use-region/src/: lib.rs
crates/use-script/: Cargo.toml  README.md
crates/use-script/src/: lib.rs
crates/use-time-zone-id/: Cargo.toml  README.md
crates/use-time-zone-id/src/: lib.rs
crates/use-timezone/: Cargo.toml  README.md
crates/use-timezone/src/: lib.rs
docs/: history-reset-and-republish.md
