[package]
name = "use-currency-code"
description = "Small ISO 4217-style currency code primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-currency-code"
keywords = ["currency", "iso4217", "money", "locale", "rustuse"]
categories = ["internationalization", "parser-implementations"]

[lints]
workspace = true