[package]
name = "use-language"
description = "Small language subtag primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-language"
keywords = ["language", "locale", "bcp47", "subtag", "rustuse"]
categories = ["internationalization", "parser-implementations"]

[lints]
workspace = true