[package]
name = "use-region"
description = "Small region subtag primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-region"
keywords = ["region", "locale", "bcp47", "country", "rustuse"]
categories = ["internationalization", "parser-implementations"]

[lints]
workspace = true
