[package]
name = "use-time-zone-id"
description = "Small IANA time zone identifier syntax primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-time-zone-id"
keywords = ["timezone", "iana", "locale", "identifier", "rustuse"]
categories = ["date-and-time", "parser-implementations"]

[lints]
workspace = true